Implement Wlr Layer Shell
Clients can use this interface to assign the surface_layer role to wl_surfaces. Such surfaces are assigned to a "layer" of the output and rendered with a defined z-depth respective to each other. They may also be anchored to the edges and corners of a screen and specify input handling semantics. This interface should be suitable for the implementation of many desktop shell components, and a broad number of other applications that interact with the desktop.

close: https://github.com/vioken/waylib/issues/156

--- a/.github/workflows/archlinux-build.yaml
+++ b/.github/workflows/archlinux-build.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dep
         run: |
           pacman -Syu --noconfirm qt6-base qt6-declarative cmake pkgconfig pixman wayland-protocols git
-          pacman -Syu --noconfirm clang ninja
+          pacman -Syu --noconfirm clang ninja make
           pacman -Syu --noconfirm fakeroot meson sudo
       - name: Set up user
         run: |
@@ -32,6 +32,9 @@ jobs:
       - name: Install wlroots from the AUR
         run: |
           su githubuser -c "cd ~ && git clone https://aur.archlinux.org/wlroots-git.git && cd ./wlroots-git && makepkg -si --skippgpcheck --noconfirm"
+      - name: Install wlr-protocols form the AUR
+        run: |
+          su githubuser -c "cd ~ && git clone https://aur.archlinux.org/wlr-protocols-git.git && cd ./wlr-protocols-git && makepkg -si --skippgpcheck --noconfirm"
       - uses: actions/checkout@v3
         with:
           submodules: true
