--- a/examples/tinywl/CMakeLists.txt
+++ b/examples/tinywl/CMakeLists.txt
@@ -11,6 +11,7 @@ if(POLICY CMP0071)
 endif()
 
 set(QML_IMPORT_PATH ${CMAKE_BINARY_DIR}/src/server/ CACHE STRING "" FORCE)
+option(START_DEMO "Start demo when boot" ON)
 
 find_package(PkgConfig REQUIRED)
 pkg_search_module(PIXMAN REQUIRED IMPORTED_TARGET pixman-1)
@@ -48,6 +49,7 @@ qt_add_qml_module(tinywl-qtquick
 target_compile_definitions(tinywl-qtquick
     PRIVATE
     SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}"
+    $<$<BOOL:${START_DEMO}>:START_DEMO>
 )
 
 target_link_libraries(tinywl-qtquick
