Adjust ci as wlroots 0.17 has released

--- a/.github/workflows/archlinux-build-wlroots-17.yaml
+++ b/.github/workflows/archlinux-build-wlroots-17.yaml
@@ -1,4 +1,4 @@
-name: Build on archlinux
+name: Build on archlinux with wlroots-17
 
 on:
   push:
@@ -16,22 +16,18 @@ jobs:
     steps:
       - name: Run in container
         run: |
-          sed -i /etc/pacman.d/mirrorlist -e "1iServer = https://mirrors.tuna.tsinghua.edu.cn/archlinux/\$repo/os/\$arch"
           cat /etc/pacman.d/mirrorlist
           pacman-key --init
           pacman --noconfirm --noprogressbar -Syu
       - name: Install dep
         run: |
-          pacman -Syu --noconfirm qt6-base qt6-declarative cmake pkgconfig pixman wayland-protocols git
-          pacman -Syu --noconfirm clang ninja make
-          pacman -Syu --noconfirm fakeroot meson sudo
+          pacman -Syu --noconfirm --noprogressbar qt6-base qt6-declarative cmake pkgconfig pixman wlroots wayland-protocols git
+          pacman -Syu --noconfirm --noprogressbar clang ninja make
+          pacman -Syu --noconfirm --noprogressbar fakeroot meson sudo
       - name: Set up user
         run: |
           useradd -m githubuser
           echo -e "root ALL=(ALL:ALL) ALL\ngithubuser ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers
-      - name: Install wlroots from the AUR
-        run: |
-          su githubuser -c "cd ~ && git clone https://aur.archlinux.org/wlroots-git.git && cd ./wlroots-git && makepkg -si --skippgpcheck --noconfirm"
       - name: Install wlr-protocols form the AUR
         run: |
           su githubuser -c "cd ~ && git clone https://aur.archlinux.org/wlr-protocols-git.git && cd ./wlr-protocols-git && makepkg -si --skippgpcheck --noconfirm"
