--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -237,6 +237,8 @@ add_library(${TARGET}
     ${QTQUICK_SOURCES}
 )
 
+add_library(Waylib::WaylibServer ALIAS ${TARGET})
+
 qt_add_qml_module(${TARGET}
     URI Waylib.Server
     VERSION "1.0" # Qt bug: The major version must be larger than 0
