--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -116,6 +116,7 @@ set(QTQUICK_SOURCES
     qtquick/private/wbufferrenderer.cpp
     qtquick/private/wrenderbuffernode.cpp
     qtquick/private/wquickxdgoutput.cpp
+    qtquick/private/wquickfractionalscalemanagerv1.cpp
 
     ${CMAKE_CURRENT_BINARY_DIR}/text-input-unstable-v1-protocol.c
 )
@@ -216,6 +217,7 @@ set(PRIVATE_HEADERS
     qtquick/private/wbufferrenderer_p.h
     qtquick/private/wrenderbuffernode_p.h
     qtquick/private/wquickxdgoutput_p.h
+    qtquick/private/wquickfractionalscalemanagerv1_p.h
 
     ${CMAKE_CURRENT_BINARY_DIR}/text-input-unstable-v1-protocol.h
 )
