fix: missing some library links
Log: Need link wayland-server, wayland-protocols, pixman-1, xkbcommon, xcb and
e

--- a/examples/tinywl/CMakeLists.txt
+++ b/examples/tinywl/CMakeLists.txt
@@ -15,6 +15,7 @@ option(START_DEMO "Start demo when boot" ON)
 
 find_package(PkgConfig REQUIRED)
 pkg_search_module(PIXMAN REQUIRED IMPORTED_TARGET pixman-1)
+pkg_search_module(WAYLAND REQUIRED IMPORTED_TARGET wayland-server)
 
 add_executable(tinywl-qtquick
     main.cpp
@@ -60,6 +61,7 @@ target_link_libraries(tinywl-qtquick
     Qt6::QuickControls2
     Waylib::WaylibServer
     PkgConfig::PIXMAN
+    PkgConfig::WAYLAND
 )
 
 if (INSTALL_TINYWL)
