refactor: use WWrapObject for those holding QWObject
also move QObject inheritance to WWrapObj to hide deleteLater;
remove QObject inheritance from WServerInterface;
WQuickInputMethod seperate init method since QObject is initialized late

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -64,6 +64,7 @@ set(KERNEL_SOURCES
     kernel/wevent.cpp
     kernel/wserver.cpp
     kernel/wsurface.cpp
+    kernel/wtoplevelsurface.cpp
 
     kernel/wtexture.cpp
     kernel/wtypes.cpp
@@ -198,7 +199,9 @@ set(HEADERS
 
 set(PRIVATE_HEADERS
     platformplugin/types.h
+    kernel/private/wglobal_p.h
     kernel/private/wsurface_p.h
+    kernel/private/wtoplevelsurface_p.h
     qtquick/private/woutputviewport_p.h
     qtquick/private/wquickcoordmapper_p.h
     qtquick/private/woutputitem_p.h
