fix: install WInputMethodHelper (#20)
Co-authored-by: Astrea <Yixue Wang>

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -209,6 +209,7 @@ set(HEADERS
     protocols/wxdgoutput.h
     protocols/WXdgOutput
     protocols/wlayershell.cpp
+    protocols/WInputMethodHelper
     protocols/winputmethodhelper.h
     protocols/winputpopupsurface.h
 )
