--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -29,6 +29,7 @@ pkg_search_module(PIXMAN REQUIRED IMPORTED_TARGET pixman-1)
 pkg_search_module(XKBCOMMON REQUIRED IMPORTED_TARGET xkbcommon)
 pkg_search_module(XCB REQUIRED IMPORTED_TARGET xcb)
 pkg_search_module(EGL REQUIRED IMPORTED_TARGET egl)
+pkg_search_module(LIBINPUT REQUIRED IMPORTED_TARGET libinput)
 
 ws_generate(
     server
@@ -334,6 +335,7 @@ target_link_libraries(${TARGET}
     PkgConfig::XKBCOMMON
     PkgConfig::XCB
     PkgConfig::EGL
+    PkgConfig::LIBINPUT
 )
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
