feat: expose wtexture provider
Expose wtexture provider.

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -190,6 +190,7 @@ set(HEADERS
     qtquick/wxwaylandsurfaceitem.h
     qtquick/winputpopupsurfaceitem.h
     qtquick/wqmlcreator.h
+    qtquick/wbuffertextureprovider.h
 
     utils/wtools.h
     utils/wthreadutils.h
