--- a/tests/manual/live/CMakeLists.txt
+++ b/tests/manual/live/CMakeLists.txt
@@ -11,58 +11,35 @@ if(POLICY CMP0071)
 endif()
 
 set(QML_IMPORT_PATH ${CMAKE_BINARY_DIR}/src/server/ CACHE STRING "" FORCE)
-option(START_DEMO "Start demo when boot" ON)
 
 find_package(PkgConfig REQUIRED)
 pkg_search_module(PIXMAN REQUIRED IMPORTED_TARGET pixman-1)
 pkg_search_module(WAYLAND REQUIRED IMPORTED_TARGET wayland-server)
 
-add_executable(tinywl-qtquick
+qt_add_executable(live
     main.cpp
 )
 
-set_source_files_properties(QmlHelper.qml
-    PROPERTIES
-        QT_QML_SINGLETON_TYPE TRUE
-)
-
-qt_add_qml_module(tinywl-qtquick
-    URI Tinywl
+qt_add_qml_module(live
+    URI Live
     VERSION "1.0"
-    SOURCES
-        helper.h
     QML_FILES
         Main.qml
-        StackWorkspace.qml
-        XdgSurface.qml
-        LayerSurface.qml
-        TiledWorkspace.qml
-        QmlHelper.qml
-        OutputDelegate.qml
-        StackToplevelHelper.qml
-        TiledToplevelHelper.qml
-        WindowDecoration.qml
-        CloseAnimation.qml
-        MiniDock.qml
-        InputPopupSurface.qml
+    SOURCES
+        helper.h
 )
 
-target_compile_definitions(tinywl-qtquick
+target_compile_definitions(live
     PRIVATE
     PROJECT_BINARY_DIR="${PROJECT_BINARY_DIR}"
-    $<$<BOOL:${START_DEMO}>:START_DEMO>
     WLR_USE_UNSTABLE
 )
 
-target_link_libraries(tinywl-qtquick
+target_link_libraries(live
     PRIVATE
     Qt6::Quick
     Qt6::QuickControls2
-    Waylib::WaylibServer
+    waylibserver
     PkgConfig::PIXMAN
     PkgConfig::WAYLAND
 )
-
-if (INSTALL_TINYWL)
-    install(TARGETS tinywl-qtquick DESTINATION ${CMAKE_INSTALL_BINDIR})
-endif()
