--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
-# add_subdirectory(tinywl)
-#add_subdirectory(blur)
-#add_subdirectory(surface-delegate)
-#add_subdirectory(outputviewport)
-#add_subdirectory(animationclient)
+add_subdirectory(tinywl)
+add_subdirectory(blur)
+add_subdirectory(surface-delegate)
+add_subdirectory(outputviewport)
+add_subdirectory(animationclient)
