--- a/examples/tinywl/CMakeLists.txt
+++ b/examples/tinywl/CMakeLists.txt
@@ -54,6 +54,11 @@ target_compile_definitions(tinywl-qtquick
     WLR_USE_UNSTABLE
 )
 
+target_include_directories(tinywl-qtquick
+    PRIVATE
+    ${CMAKE_BINARY_DIR}/protocols
+)
+
 target_link_libraries(tinywl-qtquick
     PRIVATE
     Qt6::Quick
